// zippylog message types shared between protocol ends

package zippylog.protocol;

// describes an individual stream
message StreamInfoV1 {
    required string path = 1;
    optional uint64 length = 2;
}

// describes an individual stream set
message StreamSetInfoV1 {
    // path to this stream set
    required string path = 1;

    // describes streams within this set
    repeated StreamInfoV1 stream = 2;
}

// describes an individual bucket
message BucketInfoV1 {
    // path to this bucket
    required string path = 1;

    // describes stream sets within this bucket
    repeated StreamSetInfoV1 stream_set = 2;
}

// describes a stream store
message StoreInfoV1 {
    // describes buckets within the store
    repeated BucketInfoV1 bucket = 1;
}

// TODO why do we have separate fields for paths and string above?

// a stream was added to the store
message StoreChangeStreamAddedV1 {
    required string bucket = 1;
    required string stream_set = 2;
    required string stream = 3;
    optional uint64 length = 4;
}

// a stream was deleted from the store
message StoreChangeStreamDeletedV1 {
    required string bucket = 1;
    required string stream_set = 2;
    required string stream = 3;
    optional uint64 length = 4;
}

// a stream in the store was appended to
message StoreChangeStreamAppendedV1 {
    required string bucket = 1;
    required string stream_set = 2;
    required string stream = 3;
    optional uint64 length = 4;
}

message StoreChangeBucketAddedV1 {
    required string bucket = 1;
}

message StoreChangeBucketDeletedV1 {
    required string bucket = 2;
}

message StoreChangeStreamSetAddedV1 {
    required string bucket = 1;
    required string stream_set = 2;
}

message StoreChangeStreamSetDeletedV1 {
    required string bucket = 1;
    required string stream_set = 2;
}
